{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "f10ec09b-9265-41b9-bc20-c9579b782a6d",
            "actions": [
                {
                    "name": "OnMove",
                    "type": "Value",
                    "id": "e4b9f2a7-8688-4d04-8a99-767a9e44d146",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnRun",
                    "type": "Button",
                    "id": "7e7eef85-28cc-4409-880a-0c3cc3db836a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "OnJump",
                    "type": "Button",
                    "id": "02461059-416d-4f1f-b26c-cabbc5dd355b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "OnPistol",
                    "type": "Button",
                    "id": "7031ddb5-5655-4d06-a671-e6cc228ac25b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnRifle",
                    "type": "Button",
                    "id": "c6861a1e-46bb-4745-b491-59095be60e43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnShotGun",
                    "type": "Button",
                    "id": "8dfc8c1e-a963-4b14-b141-6ca71239bcdc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnShoot",
                    "type": "Button",
                    "id": "a4befdbb-99dc-432f-92fd-cf7aafd9f94e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnShootRifle",
                    "type": "Button",
                    "id": "bd24dbe2-b682-4f5f-8402-834a970fafe0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnShootShotGun",
                    "type": "Button",
                    "id": "b8a5b1df-4db2-4df8-b046-afbdb451ca0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "OnBomb",
                    "type": "Button",
                    "id": "9d93afb6-bef2-4293-8632-d7396106bcb4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnDodge",
                    "type": "Button",
                    "id": "7960bbf4-f06f-49c1-b845-ae52249a651f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "OnDodgeLeft",
                    "type": "Button",
                    "id": "5965d489-276a-4795-931c-cd5c7411006f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnDodgeRight",
                    "type": "Button",
                    "id": "01cec039-0c89-4c30-98a1-eb65be7a8631",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnDodgeBackwards",
                    "type": "Button",
                    "id": "5da1afa8-c267-4ee4-8bb1-1d3bba1449ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnRotateCamera",
                    "type": "Value",
                    "id": "5961dccd-4102-4911-aad8-8a7f87c96807",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1c17f0fc-436d-4bd2-8588-ae96b3afcbfc",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "OnJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8a4e79c-c378-4067-8456-8a799171ca74",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b708dee5-683a-480d-9c7a-af8b8c2292ac",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "0d2a21f6-dd52-4c12-8fb1-68c272773b5f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b7b23291-2ec0-4ddf-ac09-d3aff4ffd273",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "91af52e2-bdcd-45dd-9d0a-d2a192369781",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "538fe1b8-7182-4850-873e-d9f88c99dbb0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "095f2e58-6fbc-44b0-9d56-362d61cbb7be",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "32907bf5-1556-4669-a69c-72be72cd0dce",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "OnShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "557aa1b3-de94-4e8f-b19c-34d7fccd29ea",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "177dff3d-a504-45f1-a895-953475c51a2b",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodge",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "2c7f020a-2383-4f24-85ea-e6f79cea754b",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodge",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "3b32150d-bc13-4c90-8aa1-a360b0346ff7",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodge",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "9d102156-7253-4aa5-b44b-bcfa7c68bab5",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodge",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "edabbf28-3b89-4ec8-bdaa-fc444c1249c1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodge",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "9247dbc1-9212-4cd9-9502-2bed5cd6261f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodge",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "bae2f081-160e-4a3f-aa7c-e6f7620ffb8f",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "2016baaf-3846-4432-a018-e269ae0a9758",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "914e48ce-b7f8-4432-bdf0-fb276c0c18c3",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "3c8b4003-a0d4-475f-a54e-99f836fedba2",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "e32ccc22-0eed-4c21-ab45-dfc628122058",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "28e699a2-5955-4a73-8360-a999280c84fd",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "3094e3c8-614f-458f-8550-f87564481f0e",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeLeft",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "de07ff3f-0b16-4c19-a023-650ab9e60612",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "a7056e20-d3e1-40f1-8ae2-b98684f7a1f0",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "e6598580-e66f-4d30-963f-87200e31f0cc",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeLeft",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "7678d0f7-13b8-44a3-b888-ac29c57a89f7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "e68235a0-0191-4625-907b-5921b1a0c6be",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9ba05440-3bcc-4ab9-98b6-3f187e89c6f6",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "OnRun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2dd0f0a1-b60a-447d-8dd9-36bc1b56b0e3",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnRun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "75ad9321-218b-4a2c-99f2-4cffe867a314",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeBackwards",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "9506eea0-fadd-43cd-b9d9-01200459eaaf",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeBackwards",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "5052808e-2106-45fe-9d9d-4cf1fb9b4ee2",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeBackwards",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "d3c7767a-d047-4f54-8357-9c41bc4a5f7b",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeBackwards",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "bfcef283-8e02-4052-a1dc-4d3a07ab160b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeBackwards",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "7a756374-7011-4d74-8392-a286428fecd1",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDodgeBackwards",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6db7c781-1563-46b0-8796-85a00ec84d09",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnPistol",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3d9521f-639b-4c3e-a7d0-1f0f742eac75",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnPistol",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c40d7a3d-39ae-493e-b26a-a0107c99840d",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "OnShootRifle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8c5c506-2787-40bd-8164-8dfe6ebd21ae",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnShootRifle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "094e4425-ac45-4cb3-8a08-016f1b0e797a",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "OnShootShotGun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65d24275-5b60-4df2-bb3e-ea98d2341eda",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnShootShotGun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bb4b5fe-71d2-4936-95e6-ecdcc065353f",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnBomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ded46692-2202-4504-9559-fbacf088c61b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnBomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d59fbf0a-94ea-4aa2-8e92-dd29be5a6d8a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnRotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d3c9476-506a-4ab5-910f-b02d60e8b9cf",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnRifle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b334610-1c02-4b69-936b-e0668b3d3dad",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnRifle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e032081-580b-4c43-9758-14b2aef8b040",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnShotGun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9010a24e-ea59-4d93-b4ab-c2cafcfaec51",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnShotGun",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}